--- a/skillmap.yaml
+++ b/skillmap.yaml
@@ -3,17 +3,17 @@ course_description: |
   The course is an introduction to parallel and concurrent programming, and the programming language is Go / Golang.
   Assume students have some programming experience in another language, such as Java or Python.
   Provide code snippets to make it more interesting, and format inline code as monospace.
-questions_per_skill: 3
+questions_per_skill: 10
 
 unit_1:
-  unit_name: Intro to Golang & Basic Concurrency
-
+  unit_name: Unit 1 test
   page_1:
-    page_name: What is parallelism and concurrency?
+    page_name: What is the history of Iran?
     skills:
-      - Understand the basics of concurrency & parallelism & sequential
-
-  page_2: 
-    page_name: Setting up Go
+      - Understand the different empires of Iran
+unit_2:
+  unit_name: Unit 2 test
+  page_1:
+    page_name: What is the history of Sweden?
     skills:
-      - Setup a functioning Go environment and set up Go modules
+      - Understand the different empires of Sweden
