--- a/skillmap.yaml
+++ b/skillmap.yaml
@@ -8,12 +8,13 @@ questions_per_skill: 10
 unit_1:
   unit_name: Unit 1 test
   page_1:
-    page_name: What is the history of Iran?
+    page_name: What is parallelism and concurrency?
     skills:
-      - "Understand the different empires: Iran"
+      - Understand the basics of concurrency & parallelism & sequential
 unit_2:
   unit_name: Unit 2 test
   page_1:
-    page_name: What is the history of Sweden?
+    page_name: Tour of Go 3 (Functions)
     skills:
-      - "Understand the different empires: Sweden"
+      - "Understand and apply Golang fundementals: Functions"
+      - "Understand and apply Golang fundementals: Variadic parameter functions"
