--- a/skillmap.yaml
+++ b/skillmap.yaml
@@ -8,9 +8,9 @@ questions_per_skill: 10
 unit_1:
   unit_name: Unit 1 test
   page_1:
-    page_name: What is parallelism and concurrency?
+    page_name: What is JavaScript and React?
     skills:
-      - Understand the basics of concurrency & parallelism & sequential
+      - Understand the basics of JavaScript & React
 unit_2:
   unit_name: Unit 2 test
   page_1:
